--- a/lang/it.json
+++ b/lang/it.json
@@ -1,22 +1,22 @@
 {
-  "FABULAULTIMA.AbilityStr": "Strength",
-  "FABULAULTIMA.AbilityCon": "Constitution",
-  "FABULAULTIMA.AbilityDex": "Dexterity",
-  "FABULAULTIMA.AbilityInt": "Intelligence",
-  "FABULAULTIMA.AbilityWis": "Wisdom",
-  "FABULAULTIMA.AbilityCha": "Charisma",
+  "FU.AbilityStr": "Strength",
+  "FU.AbilityCon": "Constitution",
+  "FU.AbilityDex": "Dexterity",
+  "FU.AbilityInt": "Intelligence",
+  "FU.AbilityWis": "Wisdom",
+  "FU.AbilityCha": "Charisma",
 
-  "FABULAULTIMA.AbilityStrAbbr": "str",
-  "FABULAULTIMA.AbilityConAbbr": "con",
-  "FABULAULTIMA.AbilityDexAbbr": "dex",
-  "FABULAULTIMA.AbilityIntAbbr": "int",
-  "FABULAULTIMA.AbilityWisAbbr": "wis",
-  "FABULAULTIMA.AbilityChaAbbr": "cha",
+  "FU.AbilityStrAbbr": "str",
+  "FU.AbilityConAbbr": "con",
+  "FU.AbilityDexAbbr": "dex",
+  "FU.AbilityIntAbbr": "int",
+  "FU.AbilityWisAbbr": "wis",
+  "FU.AbilityChaAbbr": "cha",
 
-  "FABULAULTIMA.EffectCreate": "Create Effect",
-  "FABULAULTIMA.EffectToggle": "Toggle Effect",
-  "FABULAULTIMA.EffectEdit": "Edit Effect",
-  "FABULAULTIMA.EffectDelete": "Delete Effect",
+  "FU.EffectCreate": "Create Effect",
+  "FU.EffectToggle": "Toggle Effect",
+  "FU.EffectEdit": "Edit Effect",
+  "FU.EffectDelete": "Delete Effect",
 
-  "FABULAULTIMA.Add": "Add"
+  "FU.Add": "Add"
 }
