Added selects to weapon qualities which requires a specific type of field, and a text input for Hunting weapons

--- a/lang/en.json
+++ b/lang/en.json
@@ -24,6 +24,11 @@
     "item": {
       "equipment": {
         "addQuality": "Add Quality",
+        "armor": {
+          "defense": "Defense",
+          "magicalDef": "Magical Defense",
+          "initiativeMod": "Initiative Modifier"
+        },
         "cost": "Cost",
         "qualities": "Qualities",
         "qualitiesList": {
