--- a/lang/en.json
+++ b/lang/en.json
@@ -115,6 +115,17 @@
       },
       "selectQuality": "Select a quality"
     },
+    "species": "Species",
+    "speciesType": {
+      "beast": "Beast",
+      "construct": "Construct",
+      "demon": "Demon",
+      "elemental": "Elemental",
+      "humanoid": "Humanoid",
+      "monster": "Monster",
+      "plant": "Plant",
+      "undead": "Undead"
+    },
     "statuses": {
       "confused": "Confused",
       "furious": "Furious",
